--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -53,7 +53,7 @@ jobs:
                 fs.writeFileSync(path.join(temp, `${artifact.name}.zip`), Buffer.from(download.data));
               }
 
-              const newRelease = github.repos.createRelease({
+              const newRelease = await github.repos.createRelease({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 tag_name: dateStr,
